k8s/01-backend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team3-backend
  labels:
    app: team3-backend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team3-backend
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: team3-backend
    spec:
      containers:
        - name: team3-backend
          image: 672381912436.dkr.ecr.ap-northeast-2.amazonaws.com/team3-ecr-backend:latest
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: "250m"
              memory: "384Mi"
            limits:
              cpu: "500m"
              memory: "768Mi"
          readinessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 15
---
apiVersion: v1
kind: Service
metadata:
  name: team3-backend-svc
spec:
  type: ClusterIP
  selector:
    app: team3-backend
  ports:
    - port: 80
      targetPort: 8080
