k8s/04-frontend.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: team3-frontend
  labels:
    app: team3-frontend
spec:
  replicas: 2
  selector:
    matchLabels:
      app: team3-frontend
  template:
    metadata:
      labels:
        app: team3-frontend
    spec:
      containers:
        - name: team3-frontend
          image: 672381912436.dkr.ecr.ap-northeast-2.amazonaws.com/team3-ecr-frontend:latest
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "50m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: team3-frontend-svc
spec:
  type: NodePort
  selector:
    app: team3-frontend
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30080
